<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:title="@string/menu_home"
            android:icon="@drawable/home_icon"

            />
        <item
            android:id="@+id/nav_car_list"
            android:title="@string/menu_car_list"
            android:icon="@drawable/car_icon" />
        <item
            android:id="@+id/nav_journey"
            android:title="@string/menu_journey"
            android:icon="@drawable/location_icon" />
    </group>


    <item android:title="@string/menu_profile">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/nav_login"
                    android:title="@string/menu_login"
                    android:icon="@drawable/login_icon" />
                <item
                    android:id="@+id/nav_profile"
                    android:title="@string/menu_my_profile"
                    android:icon="@drawable/profile_icon" />
                <item
                    android:id="@+id/nav_logout"
                    android:title="@string/menu_logout"
                    android:icon="@drawable/logout_icon" />
            </group>
        </menu>
    </item>

    <item android:title="@string/menu_communication">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/nav_share"
                    android:title="@string/menu_share"
                    android:icon="@drawable/share_icon" />
                <item
                    android:id="@+id/nav_rate"
                    android:title="@string/menu_rate"
                    android:icon="@drawable/rate_icon" />
                <item
                    android:id="@+id/nav_settings"
                    android:icon="@drawable/settings_icon"
                    android:title="@string/menu_settings" />
            </group>
        </menu>
    </item>
</menu>